# Dinkplay

./: CMakeLists.txt  ChangePlay.cpp  ChangePlay.hpp  Directory.cpp  Directory.hpp  Interval.cpp  Interval.hpp  IntervalWorker.cpp  IntervalWorker.hpp  Main.qml  Media.cpp  Media.hpp  ModifyAudioFrames.cpp  ModifyAudioFrames.hpp  Player.cpp  Player.hpp  SeekToTime.cpp  SeekToTime.hpp  SeekToTimeWorker.cpp  SeekToTimeWorker.hpp  Top.cpp  Top.hpp  _main.cpp  main.cpp  media_cat0.qrc  media_cat1.qrc  qml.qrc  test.cpp  testout
android/: AndroidManifest.xml  build.gradle
android/res/drawable/: splash.xml
android/src/com/denkplay/states/: DenkActivity.java  DenkService.java
iOS/: Info.plist  Info.plist.in  MyProject.entitlements  appDinkplay.entitlements  appDinkplayRelWithDebInfo.entitlements
iOS/src/: MPRemoteCommandCenter.h  MPRemoteCommandCenter.mm  MyMPRemoteCC.h  MyMPRemoteCC.mm
tools/: GIT.rtf
ui/: About.qml  Audio.qml  MediaControls.qml  Playing.qml  Settings.qml  TopControls.qml  Video.qml
